[gd_scene load_steps=2 format=3 uid="uid://b0n0wroqm5ybm"]

[ext_resource type="Script" uid="uid://dro15se7wwlq" path="res://addons/bvn-script/editor/notif/bvni_notif_badge.gd" id="1_bywxv"]

[node name="BvniNotifBadge" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
script = ExtResource("1_bywxv")

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Text"

[node name="ProgressBar" type="ProgressBar" parent="Button"]
modulate = Color(0, 0, 0, 0.68235296)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
max_value = 3.0
fill_mode = 1
show_percentage = false

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
